@@ -1,5 +1,11 @@
 2003-01-12  Bruno Haible  <bruno@clisp.org>
 
+	* localcharset.h: New file.
+	* localcharset.c: Include it.
+	* Makefile.am (libgettextlib_la_SOURCES): Add localcharset.h.
+
+2003-01-12  Bruno Haible  <bruno@clisp.org>
+
 	* alloca_.h: New file, from gnulib.
 	* liballoca.h: Remove file.
 	* Makefile.am: Add snippet from gnulib module alloca.
