@@ -1,3 +1,11 @@
+2003-01-12  Bruno Haible  <bruno@clisp.org>
+
+	* localcharset.h: New file.
+	* localcharset.c: Include it.
+	* Makefile.in (HEADERS): Add localcharset.h.
+	(COMHDRS): Remove variable, fold into HEADERS.
+	(COMSRCS): Remove variable, fold into SOURCES.
+
 2002-12-12  Bruno Haible  <bruno@clisp.org>
 
 	* dcigettext.c (INTVARDEF): Correct fallback definition.
